@@ -15,19 +15,21 @@ noinst_PROGRAMS = 	\
 	hash		\
 	hostinfo	\
 	pack		\
+	socksclient	\
 	unpack		\
 	urlparse	\
 	$(TESTS)
 
 #####
 
-url_test_SOURCES = url_test.c
-url_test_LDADD   = $(top_builddir)/src/libgnet.la
-
-dnstest_LDADD	 = $(top_builddir)/src/libgnet.la
-hash_LDADD	 = $(top_builddir)/src/libgnet.la
-hostinfo_LDADD	 = $(top_builddir)/src/libgnet.la
-pack_LDADD	 = $(top_builddir)/src/libgnet.la
-unpack_LDADD	 = $(top_builddir)/src/libgnet.la
-urlparse_LDADD	 = $(top_builddir)/src/libgnet.la
+url_test_SOURCES  = url_test.c
+url_test_LDADD    = $(top_builddir)/src/libgnet.la
+ 
+dnstest_LDADD	  = $(top_builddir)/src/libgnet.la
+hash_LDADD	  = $(top_builddir)/src/libgnet.la
+hostinfo_LDADD	  = $(top_builddir)/src/libgnet.la
+pack_LDADD	  = $(top_builddir)/src/libgnet.la
+socksclient_LDADD = $(top_builddir)/src/libgnet.la
+unpack_LDADD	  = $(top_builddir)/src/libgnet.la
+urlparse_LDADD	  = $(top_builddir)/src/libgnet.la
 
