@@ -1,3 +1,14 @@
+Wed Oct 17 16:48:03 2001  David Helder  <dhelder@umich.edu>
+
+	* src/socks-private.c: Use g_getenv.  Fix missing io channel
+	    deref.
+	
+	* src/socks.c: Cleaned up interface (get/set server and get/set
+	    enable).  SOCKS is off by default for now.  Simplified
+	    parsing code.
+	
+	* tests/socksclient.c: Added
+
 Sun Oct  7 23:04:29 2001  David Helder  <dhelder@umich.edu>
 
 	* NEWS: Added SOCKS
